--- a/templates/actor/starterset/parts/runespells-ss-partial.html
+++ b/templates/actor/starterset/parts/runespells-ss-partial.html
@@ -1,4 +1,4 @@
-<p class="subtitle">{{localize "RQG.Runespells"}}</p>
+<p class="subtitle">{{localize "RQG.Runespells"}} <a class="item-control item-create" title="Create item" data-type="runespell"><i class="fas fa-plus"></i></a></p>
 <table class="runespell-table">
     <thead class="spells-thead">
         <th>{{localize "RQG.Spell"}}</th>
