--- a/templates/actor/starterset/parts/spiritspells-ss-partial.html
+++ b/templates/actor/starterset/parts/spiritspells-ss-partial.html
@@ -1,4 +1,4 @@
-<p class="subtitle">{{localize "RQG.Spiritspells"}}</p>
+<p class="subtitle">{{localize "RQG.Spiritspells"}} <a class="item-control item-create" title="Create item" data-type="spiritspell"><i class="fas fa-plus"></i></a></p>
 <table class="spiritspells-table">
     <thead class="spells-thead">
         <th>{{localize "RQG.Spell"}}</th>
