--- a/less/rqgss-actorsheet.less
+++ b/less/rqgss-actorsheet.less
@@ -529,12 +529,25 @@
             border: 1px solid #7a7971;
             border-radius: 3px;
             text-align: center;
+            display: grid;
+            grid-template-columns: 1fr;
+            .gear-item {
+                display: grid;
+                grid-template-columns: repeat(4,1fr);
+            }
         }
         .backstory-container {
             grid-area:backstory;
             border: 1px solid #7a7971;
             border-radius: 3px;
-            text-align: center;            
+            text-align: center;
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 10px;
+            .backstory-column {
+                display: grid;
+                grid-template-columns: repeat(4, 1fr);
+            }                        
         }
         .events-container {
             grid-area:events;
